# healthcare-opendata-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
deploy/: README.md
deploy/k8s/: cronjob-sync.yaml  deployment.yaml  rbac.yaml  service.yaml
docs/issues/: security-mcp-tooling-improvements.md
scripts/: enrich_bid_deadline.py  export_board_data.py  prune_local_db.py
spec/: erm.dbml
spec/features/: headless-fallback.feature  ingestion.feature  query-rows.feature  query-tools.feature  source-registration.feature
src/health_opendata_mcp/: __init__.py  cli.py  contracts.py
src/health_opendata_mcp/adapters/: __init__.py  _csv.py  _http.py  _pcc_detail.py  _pcc_opendata.py  nhi.py  pcc_detail.py  pcc_tender.py  static_csv.py
src/health_opendata_mcp/domain/: query_guard.py
src/health_opendata_mcp/ingestion/: __init__.py  pipeline.py
src/health_opendata_mcp/mcp_server/: __main__.py  server.py  service.py
src/health_opendata_mcp/repository/: __init__.py  query_executor.py  schema.py  sqlite_repo.py
tests/adapters/: test_nhi.py  test_pcc_detail.py  test_pcc_detail_enricher.py  test_pcc_tender.py  test_static_csv.py
tests/adapters/fixtures/: pcc_detail_live.html  pcc_detail_synthetic.html  pcc_search_result.html
tests/domain/: test_query_guard.py
tests/ingestion/: test_pipeline.py
tests/mcp/: test_empty_db_guard.py  test_gke_runtime.py  test_service.py
tests/repository/: test_query_executor.py  test_sqlite_repo.py
